# pico-100ask-examples

./: .gitignore  CMakeCache.txt  CMakeLists.txt  LICENSE
7segment/: CMakeLists.txt
buzzer/: blink.c
dht11_sensor/: CMakeLists.txt  dht11.c
hello_7segment/: CMakeLists.txt  hello_7segment.c
lm393_adc/: CMakeLists.txt  lm393_adc.c
motor/: CMakeLists.txt  motor.c
slide_rheostat/: CMakeLists.txt  slide_rheostat.c
